# cloud-toolforge-toolforge-cli

./: .gitignore  .gitreview  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
bash-completion/: toolforge  toolforge-build
debian/: README  changelog  control  copyright  py3dist-overrides  rules  toolforge-cli.bash-completion
debian/source/: options
tests/: test_build.py  test_cli.py
tests/fixtures/: pipeline_oom_run.json  pipeline_without_status.json
tests/functional/: test_cli.bats
tests/functional/fixtures/echo_debug_and_verbose_env/: toolforge-debug-and-verbose-env
tests/functional/fixtures/echo_debug_env/: toolforge-debug-env
tests/functional/fixtures/echo_verbose_env/: toolforge-verbose-env
tests/functional/fixtures/mixed_files/: nontoolforge-plugin  toolforge-plugin
tests/functional/fixtures/multiple_binaries/: toolforge-one  toolforge-two
tests/functional/fixtures/nested_binaries/: toolforge-simple
tests/functional/fixtures/nested_binaries/nested_dir/: toolforge-nested
tests/functional/fixtures/passes_params_through/: toolforge-params
tests/functional/fixtures/single_binary/: toolforge-binary
tests/unit/: test_build.py  test_cli.py
tests/unit/fixtures/: pipeline_oom_run.json  pipeline_successful_run.json  pipeline_uncompleted_run.json  pipeline_without_status.json
toolforge_cli/: build.py  cli.py  config.py  k8sclient.py
utils/: build_deb.sh  bump_version.sh  check-style.sh  format-code.sh  run_ci_locally.sh
utils/debuilder-bullseye/: Dockerfile  entrypoint.sh  generate_changelog.sh
utils/debuilder-buster/: Dockerfile  entrypoint.sh  generate_changelog.sh
