[tool.poetry]
name = "toolforge-cli"
version = "0.2.4"
description = "Toolforge client"
authors = ["David Caro <dcaro@wikimedia.org>"]
license = "GPLv3"
homepage = "https://gerrit.wikimedia.org/r/admin/repos/cloud/toolforge/toolforge-cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
PyYAML = "^6.0"
requests = "^2.27.1"
urllib3 = "^1.26.8"
cryptography = "^36.0.1"

[tool.poetry.plugins."console_scripts"]
"toolforge" = "toolforge_cli.cli:main"

[tool.poetry.group.dev.dependencies]
coverage = "^6.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
bats-core-pkg = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
include = ["*/toolforge_cli/*"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
include_trailing_comma = true
skip_gitignore = true

[tool.black]
line_length = 120

[tool.mypy]
exclude = [
    "^debian/",  # debian packaging files
    "^.cache",
    "^build",
    "^dist",
    "^.tox",
]
